fixed footer issue aligning with body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,8 +18,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: 0;
     display: flex;
-     
-    }
 }
 .bio {
     background-color: blanchedalmond;
@@ -73,18 +71,20 @@ ul {
 }
 
  footer {
-    display: flex;
-    text-align: center;
-    flex-direction: row;
-    justify-content: right;
-    margin: 0 AUTO;
-    width: 58%;
-    background-color: #000;
-    position: fixed;
-    padding: 2%;
-    bottom: 0;
-    padding: 1%;
+  display: flex;
+  text-align: center;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 0;
+  width: 100%;
+  background-color: #000;
+  position: sticky fixed;
   }
+
+  small {
+    color: #fff;
+  }
+
 .bio {
     border: 1px solid #D3D3D3;
     background-color: #f7e2b7;
@@ -129,7 +129,6 @@ input[type=text], select, textarea {
     width: 100%; /* Full width */
     padding: 10px; /* Some padding */  
     border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
     box-sizing: border-box; /* Make sure that padding and width stays in place */
     margin-top: 6px; /* Add a top margin */
     margin-bottom: 16px; /* Bottom margin */
@@ -150,21 +149,28 @@ input[type=text], select, textarea {
   }
   
   .form {
-    border-radius: 5px;
+    /* border-radius: 5px; */
     background-color: blanchedalmond;
     padding: 20px;
     width: 100%;
     height: 120vh;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   /* GOOGLE MAPS */
   .location {
       width: 100%;
       overflow: hidden;
+      display: flex;
+      flex-direction: column;
   }
 
   .maps {
+      width: 100%;
       padding: 2%;
+      justify-content: center;
+      display: block;
   }
 
   /* PORTFOLIO */
@@ -186,22 +192,21 @@ input[type=text], select, textarea {
 }
 
 .portdcrp1 {
-    position: absolute;
-    position: sticky;
-    bottom: 56%;
-    width: 259px;
-    text-align: center;
-    background-color: #515254;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-    float: inherit;
+  position: absolute sticky;
+  bottom: 56%;
+  width: 299px;
+  text-align: center;
+  background-color: #515254;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+  float: inherit;
 }
 
 .portdcrp2 {
   position: absolute sticky;
   bottom: 56%;
-  width: 259px;
+  width: 299px;
   text-align: center;
   background-color: #515254;
   color: white;
@@ -217,7 +222,7 @@ input[type=text], select, textarea {
 /* TYPOGRAPHY */
 .name {
   text-transform: uppercase;
-  font-family: 'Poppins', serif;
+  font-family: 'Open Sans', sans-serif;
   letter-spacing: 2px;
   font-size: 30px;
 }
